src-tauri/crates/key-vault/src/snapshots/key_vault__key_extractor__tests__gemini_yuque_docs.snap
---
source: src/key_vault/tests/key_extractor_tests.rs
expression: result
---
api_key: sk-testgemini000000000000000
base_url: ~
key_type: gemini_cli
confidence: high
notes:
  - Found gemini_cli key
