src-tauri/crates/key-vault/src/snapshots/key_vault__key_extractor__tests__key_adjacent_chinese.snap
---
source: src/key_vault/tests/key_extractor_tests.rs
expression: result
---
api_key: sk-b166e6c00f9246f4bda823196826815c
base_url: ~
key_type: codex
confidence: high
notes:
  - Found codex key
